--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -86,7 +86,7 @@ body {
   background: #211b19;
 }
 
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
   .notfound .notfound-404 h1 {
     font-size: 148px;
   }
@@ -106,5 +106,44 @@ body {
   .notfound a {
     padding: 7px 15px;
     font-size: 14px;
+  }
+} */
+
+
+
+
+
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  .notfound .notfound-404 {
+    height: 148px;
+    margin: 0px auto 10px;
+  }
+  .notfound .notfound-404 h1 {
+    font-size: 86px;
+  }
+  .notfound .notfound-404 h2 {
+    font-size: 16px;
+  }
+  .notfound a {
+    padding: 7px 15px;
+    font-size: 14px;
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  
+    .notfound .notfound-404 h1 {
+      font-size: 148px;
+    }
+  
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  .notfound .notfound-404 h1 {
+    font-size: 148px;
   }
 }
