changes contact page

--- a/public/css/banner-carousel.css
+++ b/public/css/banner-carousel.css
@@ -2,7 +2,8 @@
 .banner-info {
     padding: 4em 0;
     position: absolute;
-    top: 250px;
+    top: 210px;
     left: 350px;
+    width: 510px;
 }
 
