--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -7717,6 +7717,46 @@ button.bg-dark:focus {
   margin-left: auto !important;
 }
 
+
+
+
+    .my-form {
+        color: #305896;
+    }
+    .my-form .btn-default {
+        background-color: #305896;
+        color: #fff;
+        border-radius: 0;
+    }
+    .my-form .btn-default:hover {
+        background-color: #4498C6;
+        color: #fff;
+    }
+    .my-form .form-control {
+        border-radius: 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: 576px) {
   .m-sm-0 {
     margin: 0 !important;
