--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,8 +16,7 @@ body {
 }
 
 .wrap {
-    background: #3369e7;
-
+    background-color: crimson;
 }
 body a {
     transition: 0.5s all;
@@ -81,7 +80,7 @@ p {
     font-size: 16px;
     letter-spacing: 1px;
     line-height: 1.9;
-    color: #707579;
+    color: #fff;
 }
 
 ul,
@@ -144,7 +143,7 @@ nav ul {
 nav ul li {
 	margin: 0px;
 	display:inline-block;
-	float: left;
+	
 	}
 
 /* Styling the links */
