--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,11 +58,11 @@
 								<li class=""><a href="#services">Services </a></li>
 								<li class="">
 								<!-- First Tier Drop Down -->
-								<label for="drop-2" class="toggle">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
-								<a href="#">Dropdown <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+								<label for="drop-2" class="toggle">Qualifications <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
+								<a href="#">Qualifications <span class="fa fa-angle-down" aria-hidden="true"></span></a>
 								<input type="checkbox" id="drop-2"/>
 								<ul class="inner-dropdown">
-									<li><a href="#skills">My Skills</a></li>
+									<li><a href="#skills">Skills</a></li>
 									<li class=""><a href="#edu-exp">Education and Experience</a></li>
 								</ul>
 								</li>
@@ -102,13 +102,16 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="images/banner.jpg" alt="First slide">
+        <img class="d-block w-100" src="images/c2.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="images/b1.jpg" alt="Second slide">
+        <img class="d-block w-100" src="images/banner.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="images/b6.jpg" alt="Third slide">
+        <img class="d-block w-100" src="images/b1.jpg" alt="Third slide">
+      </div>
+	  <div class="carousel-item">
+        <img class="d-block w-100" src="images/b8.jpg" alt="Third slide">
       </div>
    </div>
  
@@ -116,10 +119,12 @@
 
 
 <div class="banner-info">
-		 <h2 class="heading-banner text-capitalize">Hi. I'm <span>Web Designer.</span></h2>
-				<p class=" mt-3" style="color:white">Integer porttitor <span>mollisar </span>lorem, at molestie arcu pulvinar ut. Proin ac fermentum est.
+		 <h2 class="heading-banner text-capitalize">Hi. I'm <span style="color:crimson">Varun Prajapati.</span></h2>
+				<p class=" mt-3" ><h3>Front End Developer <span>at Training Basket. </span></h3><br> </p>
+                <p style="color:white">molestie arcu pulvinar ut. Proin ac fermentum est.
 				Cras mi ipsum, consectetur. Integer at tellus in ex iaculis accumsan nec tristique justo. Aliquam dapibus iaculis enim,
 				a dapibus nibh convallis scelerisque.</p>
+               
 				<a href="#edu-exp" class="banner-button btn mt-md-5 mt-3 scroll">Read More</a>
 </div>
 
@@ -135,8 +140,8 @@
 							<div class="col-lg-7 advantage-grid-info">
 								<div class="advantage_left">
 									<h2 class="heading text-capitalize mb-4">About Me <span></span></h2>
-									<h4>I'm a Professional Web Designer </h4>
-									<p class="mb-4">Nulla pellentesque mi non laoreet eleifend. Integer sed porttitor mollisar lorem, at molestie
+									<h4>I'm a Professional Front End Devoloper </h4>
+									<p class="mb-4" style="color:darkgray">Nulla pellentesque mi non laoreet eleifend. Integer sed porttitor mollisar lorem, at molestie
 									arcust pulvinar ut. Proina fermentum est. Cras mist ipsum, consectetur ipsum in, egestas tellus ipsu vestibulum
 									tellus accumsan nec tristique justo.</p>
 									<a href="images/Varun_Angular_Resume.pdf" class="banner-button1 btn">Download Cv</a>
@@ -211,21 +216,21 @@
 								<div class="col-lg-4 col-sm-4 col-6 count-num-txt mb-4">
 								  <div class="number-w3three-info icon1">
 									<span class="fa fa-briefcase mb-sm-4 mb-2"></span>
-									<h5>10</h5>
+									<h5>01</h5>
 									<h6 class="pt-2">Experience</h6>
 								  </div>
 								</div>
 								<div class="col-lg-4 col-sm-4 col-6 count-num-txt mb-4">
 								  <div class="number-w3three-info icon2">
 									<span class="fa fa-clone mb-sm-4 mb-2"></span>
-									<h5>250+</h5>
+									<h5>10+</h5>
 									<h6 class="pt-2">Projects</h6>
 								  </div>
 								</div>
 								<div class="col-lg-4 col-sm-4 col-6 count-num-txt mb-4">
 								  <div class="number-w3three-info icon3">
 									<span class="fa fa-trophy mb-sm-4 mb-2"></span>
-									<h5>150</h5>
+									<h5>5</h5>
 									<h6 class="pt-2">Awards</h6>
 								  </div>
 								</div>
@@ -287,23 +292,23 @@
 							<section id="content1">
 								<div class="row text-left">
 									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Master Of Design</h4>
-										<h6>- Sit amet consectetur- 2014</h6>
+										<h4>Master Of Computer Application</h4>
+										<h6>Hi-Tech Institute of Engineering & Technology-2019</h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Bachelor Degree</h4>
-										<h6>- Arcu lorem ipsum- 2010</h6>
+										<h4>Bachelor of Computer Application</h4>
+										<h6>- M.M.H College - 2017</h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Information Technologies</h4>
-										<h6>- Arcu lorem ipsum- 2006</h6>
+										<h4>Intermediate with Science </h4>
+										<h6>- Agrasen Inter College - 2014</h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Diploma in Information</h4>
-										<h6>- Arcu lorem ipsum- 2006</h6>
+										<h4>Highschool with Science</h4>
+										<h6>- Agrasen Inter College - 2012</h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
 								</div>
@@ -312,24 +317,16 @@
 								<div class="row text-left">
 									<div class="col-lg-6 inner-w3pvt-wrap">
 										<h4>Front End Developer</h4>
-										<h6>- 2016-2018 at fringilla</h6>
+										<h6>- 2018-2019 at Training Basket</h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
 									<div class="col-lg-6 inner-w3pvt-wrap">
 										<h4>Creative Designer</h4>
-										<h6> - 2014-2016 at adipiscing</h6>
+										<h6> - 2014-2017 at </h6>
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 									</div>
-									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>UI/UX Designer</h4>
-										<h6> - 2010-2014 at consectetur</h6>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
-									</div>
-									<div class="col-lg-6 inner-w3pvt-wrap">
-										<h4>Mobile App Developer</h4>
-										<h6> - 2010-2014 at consectetur</h6>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
-									</div>
+									
+									
 								</div>
 							</section>
 						</div>
@@ -342,9 +339,10 @@
 		
 		<!-- contact -->
 		<section class="contact" id="contact">
+			
 			<div class="inner-sec">
 				<h3 class="heading text-capitalize mb-4">Get In Touch <span></span></h3>
-				<form name="contact-form" class="contact-form" method="post" action="#">
+				<form name="contact-form" class="my-form" method="post" action="#">
 					<div class="row">
 						<div class="col-md-6 con-gd">
 							<div class="form-group">
@@ -366,12 +364,21 @@
 						</div>
 					</div>
 					<div class="form-group mb-0">
-						<button type="submit" class="btn btn-default">Submit</button>
+						<button type="submit" class="btn btn-success">Submit</button>
 					</div>
 				</form>
 			</div>
 		</section>
 		<!-- contact -->
+<div >
+        <div >
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7689.886384528813!2d77.36783884727724!3d28.626036727304886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5336becb191%3A0xa89caf8bfb9e7068!2sI%20Thum%20Sector%2062%20Noida!5e1!3m2!1sen!2sin!4v1567942018877!5m2!1sen!2sin" width=100% height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+        <br />
+
+
+
+
 	</div>
 	<!-- //container -->
 	
