--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -121,7 +121,7 @@
 <div class="banner-info">
 		 <h2 class="heading-banner text-capitalize">Hi. I'm <span style="color:crimson">Varun Prajapati.</span></h2>
 				<p class=" mt-3" ><h3>Front End Developer <span>at Training Basket. </span></h3><br> </p>
-                <p style="color:white">molestie arcu pulvinar ut. Proin ac fermentum est.
+                <p style="color: #fff">molestie arcu pulvinar ut. Proin ac fermentum est.
 				Cras mi ipsum, consectetur. Integer at tellus in ex iaculis accumsan nec tristique justo. Aliquam dapibus iaculis enim,
 				a dapibus nibh convallis scelerisque.</p>
                
@@ -141,7 +141,7 @@
 								<div class="advantage_left">
 									<h2 class="heading text-capitalize mb-4">About Me <span></span></h2>
 									<h4>I'm a Professional Front End Devoloper </h4>
-									<p class="mb-4" style="color:darkgray">Nulla pellentesque mi non laoreet eleifend. Integer sed porttitor mollisar lorem, at molestie
+									<p class="mb-4" >Nulla pellentesque mi non laoreet eleifend. Integer sed porttitor mollisar lorem, at molestie
 									arcust pulvinar ut. Proina fermentum est. Cras mist ipsum, consectetur ipsum in, egestas tellus ipsu vestibulum
 									tellus accumsan nec tristique justo.</p>
 									<a href="images/Varun_Angular_Resume.pdf" class="banner-button1 btn">Download Cv</a>
@@ -177,7 +177,7 @@
 								<div class="card-body">
 									<span class="fa fa-pencil-square-o mb-4"></span>
 									<h5 class="card-title text-uppercase">Developing</h5>
-									<p class="card-text">Proina fermentum eset sed. Cras mist ipsum, dolor et consectetur ipsum.</p>
+									<p class="card-text" >Proina fermentum eset sed. Cras mist ipsum, dolor et consectetur ipsum.</p>
 								</div>
 							</div>
 						</div>
@@ -186,7 +186,7 @@
 								<div class="card-body">
 									<span class="fa fa-window-restore mb-4"></span>
 									<h5 class="card-title text-uppercase">Responsive</h5>
-									<p class="card-text">Proina fermentum eset sed. Cras mist ipsum, dolor et consectetur ipsum.</p>
+									<p class="card-text" >Proina fermentum eset sed. Cras mist ipsum, dolor et consectetur ipsum.</p>
 								</div>
 							</div>
 						</div>						
@@ -346,19 +346,19 @@
 					<div class="row">
 						<div class="col-md-6 con-gd">
 							<div class="form-group">
-								<p>Name *</p>
+								<h4>Name *</h4>
 								<input type="text" class="form-control" id="name" placeholder="Enter Your Name" name="name" required="">
 							</div>
 							<div class="form-group">
-								<p>Email *</p>
+								<h4>Email *</h4>
 								<input type="email" class="form-control" id="email" placeholder="Enter Your Email Id" name="email" required="">
 							</div>
 
 						</div>
 						<div class="col-md-6 con-gd">
 							<div class="form-group">
-								<p>Send a Message *</p>
-								<textarea name="Message" class="form-control" placeholder="Enter Your Message" required=""></textarea>
+								<h4>Send a Message *</h4>
+								<textarea name="Message" class="form-control" placeholder="Enter Your Message..." required=""></textarea>
 							</div>
 
 						</div>
@@ -372,7 +372,7 @@
 		<!-- contact -->
 <div >
         <div >
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7689.886384528813!2d77.36783884727724!3d28.626036727304886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5336becb191%3A0xa89caf8bfb9e7068!2sI%20Thum%20Sector%2062%20Noida!5e1!3m2!1sen!2sin!4v1567942018877!5m2!1sen!2sin" width=100% height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3287.7582758227427!2d77.37050131508252!3d28.627419382419816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfba24a7c2d170983!2sI-thum%20and%20Grandslam%20Developers%20Pvt%20ltd!5e1!3m2!1sen!2sin!4v1567945853087!5m2!1sen!2sin" width=100% height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
         <br />
 
