--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -128,7 +128,7 @@
                                  arcust pulvinar ut. Proina fermentum est. Cras mist ipsum, consectetur ipsum in, egestas tellus ipsu vestibulum
                                  tellus accumsan nec tristique justo.
                               </p>
-                              <a href="images/Varun_Angular_Resume.pdf" class="banner-button1 btn">Download Cv</a>
+                              <a href="images/Varun_Updated_Resume_ 2019.pdf" class="banner-button1 btn">Download Cv</a>
                               <a href="/404page" class="banner-button2 btn">Hire Me</a>
                            </div>
                         </div>
